--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "deepmerge": "^4.2.2",
     "eth-block-timestamp": "0.0.6",
     "ethereum-block-by-date": "^1.2.5",
