--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     "build-testnet": "env-cmd -f .env.testnet react-scripts build",
     "build-production": "env-cmd -f .env.production react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "yarn run build-testnet"
   },
   "browserslist": {
     "production": [
